[gd_scene load_steps=5 format=2]

[ext_resource path="res://addons/slidergamepad/hslider_gamepad.gd" type="Script" id=1]
[ext_resource path="res://demo/demo_scene.gd" type="Script" id=2]

[sub_resource type="Gradient" id=1]
offsets = PoolRealArray( 0, 0.988506 )
colors = PoolColorArray( 0.372549, 0.470588, 0.494118, 1, 0.239216, 0.368627, 0.396078, 1 )

[sub_resource type="GradientTexture2D" id=2]
gradient = SubResource( 1 )
fill_to = Vector2( 1, 1 )

[node name="DemoScene" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 2 )

[node name="BGGradient" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = SubResource( 2 )
expand = true

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -179.0
margin_top = -123.0
margin_right = 179.0
margin_bottom = 123.0

[node name="Label" type="Label" parent="VBoxContainer"]
margin_right = 358.0
margin_bottom = 14.0
text = "Smooth slider"
align = 1
valign = 1

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 18.0
margin_right = 358.0
margin_bottom = 34.0

[node name="SmoothSlider" type="HSlider" parent="VBoxContainer/HBoxContainer"]
margin_right = 330.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )

[node name="SmoothValue" type="Label" parent="VBoxContainer/HBoxContainer"]
margin_left = 334.0
margin_top = 1.0
margin_right = 358.0
margin_bottom = 15.0
text = "100"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 38.0
margin_right = 358.0
margin_bottom = 58.0
rect_min_size = Vector2( 0, 20 )

[node name="Label2" type="Label" parent="VBoxContainer"]
margin_top = 62.0
margin_right = 358.0
margin_bottom = 76.0
text = "Stepped slider"
align = 1
valign = 1

[node name="HBoxContainer2" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 80.0
margin_right = 358.0
margin_bottom = 96.0

[node name="SteppedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer2"]
margin_right = 346.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
max_value = 9.0
tick_count = 10
ticks_on_borders = true
script = ExtResource( 1 )
joystick_discrete = true

[node name="SteppedValue" type="Label" parent="VBoxContainer/HBoxContainer2"]
margin_left = 350.0
margin_top = 1.0
margin_right = 358.0
margin_bottom = 15.0
text = "0"

[node name="VSeparator2" type="VSeparator" parent="VBoxContainer"]
self_modulate = Color( 1, 1, 1, 0 )
margin_top = 100.0
margin_right = 358.0
margin_bottom = 120.0
rect_min_size = Vector2( 0, 20 )

[node name="Label3" type="Label" parent="VBoxContainer"]
margin_top = 124.0
margin_right = 358.0
margin_bottom = 138.0
text = "Smooth & stepped slider"
align = 1
valign = 1

[node name="HBoxContainer3" type="HBoxContainer" parent="VBoxContainer"]
margin_top = 142.0
margin_right = 358.0
margin_bottom = 158.0

[node name="SmoothSteppedSlider" type="HSlider" parent="VBoxContainer/HBoxContainer3"]
margin_right = 346.0
margin_bottom = 16.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource( 1 )
joystick_discrete = true
joystick_smooth_discrete_threshold = 0.3

[node name="SmoothSteppedValue" type="Label" parent="VBoxContainer/HBoxContainer3"]
margin_left = 350.0
margin_top = 1.0
margin_right = 358.0
margin_bottom = 15.0
text = "0"

[connection signal="value_changed" from="VBoxContainer/HBoxContainer/SmoothSlider" to="." method="_on_SmoothSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer2/SteppedSlider" to="." method="_on_SteppedSlider_value_changed"]
[connection signal="value_changed" from="VBoxContainer/HBoxContainer3/SmoothSteppedSlider" to="." method="_on_SmoothSteppedSlider_value_changed"]
